--- a/style.css
+++ b/style.css
@@ -1,99 +1,106 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
 }
-html,body{
-  height: 45%;
-  
+body{
+    font-size: monsterrant;
 }
-.slider{
-  max-width: 1100px;
-  display: flex;
+nav{
+    background: #0082e6;
+    height: 80px;
+    width: 100%;
 }
-.headers{
-  font-size: 35px;
-  font-weight: bold;
-  color: #003E6B;
-  text-align: center;
+label.logo{
+    color: white;
+    font-size: 35px;
+    line-height: 80px;
+    padding: 0 100px;
+    font-weight: bold;
+}
+nav ul{
+    float: right;
+    margin-right: 20px;
 
 }
-.fa-1x {
-  font-size: 1.5rem;
-  }
-  .navbar-toggler.toggler-example {
-  cursor: pointer;
-  }
-  .dark-blue-text {
-  color: #0A38F5;
-  }
-  .dark-pink-text {
-  color: #AC003A;
-  }
-  .dark-amber-text {
-  color: #ff6f00;
-  }
-  .dark-teal-text {
-  color: #004d40;
-  }
-  
-.slider .card{
-  flex: 1;
-  margin: 0 10px;
-  background: #fff;
+nav ul li{
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
 }
-.slider .card .img{
-  height: 200px;
-  width: 100%;
-}
-.slider .card .img img{
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-}
-.slider .card .content{
-  padding: 10px 20px;
-}
-.card .content .title{
-  font-size: 25px;
-  font-weight: 600;
-  color: #003E6B;
-}
-.cputColor{
-  color: #003E6B;
-}
-.card .content .sub-title{
-  font-size: 20px;
-  font-weight: 600;
-  color: #0097D6;
-  line-height: 20px;
-}
-.card .content p{
-  text-align: justify;
-  margin: 10px 0;
-}
-.card .content .btn{
-  display: block;
-  text-align: left;
-  margin: 10px 0;
-}
-.card .content .btn button{
-  background: #000000;
-  color: #fff;
-  border: none;
-  outline: none;
-  font-size: 17px;
-  padding: 5px 8px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: 0.2s;
-}
-.card .content .btn button:hover{
-  transform: scale(0.9);
-}
+nav ul li a{
+    color: white;
+    font-size: 17px;
+    padding: 7px 13px;
+    border-radius: 3px;
+    text-transform: uppercase;
 
-#services{
-  padding-left: 10%;
+}
+a.active, a:hover{
+    background: #1b9bff;
+    transition: .5s;
+
+}
+.checkbtn{
+    font-size: 30px;
+    color: white;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+#check{
+    display: none;
+
+}
+@media(max-width: 952px){
+    label{
+        font-size: 30px;
+        padding-left: 50px;
+    }
+    nav ul li a {
+        font-size: 16px;
+
+    }
+}
+@media(max-width: 858px){
+    
+    .checkbtn{
+        display: block;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #2c3e50;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+    nav ul li a{
+        font-size: 20px;
+
+    }
+    a:hover, a.active{
+        background:none ;
+        color:#0082e6;
+    }
+    #check:checked ~ ul{
+        left: 0;
+    }
+}
+section{
+    background: url() no-repeat;
+    background-size: cover;
+    height: calc(100vh - 80px);
+
 }
